[package]
name = "cf-dns-rotation"
description = "The Cloudflare rotation tool is used to create random IP addresses."
version = "0.1.0"
edition = "2024"
authors = ["Robert Richter <robert.richter@rrcomtech.com"]

[dependencies]
anyhow = "1.0.101"
serde_json = "1.0.149"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1.20.0"
features = ["v4"]

[dependencies.reqwest]
version = "0.13.2"
features = ["blocking", "json"]

[dependencies.clap]
version = "4.5.55"
features = ["derive"]
